-
Bug
-
Resolution: Fixed
-
P2: Important
-
4.8.0, 5.1.0 Beta 1, 5.12.0, 5.13.1
-
27d139128013c969a939779536485c1a80be977e bb6a73260ec8272647265f42180963604ad0f755
In India, digit separators are not placed after every 3 digits. Instead, the numbers are written like this.
100,000 is written as 1,00,000
10,000,000 is written as 1,00,00,000
1,000,000,000 is written as 1,00,00,00,000
100,000,000,000 is written as 1,00,00,00,00,000
The first separator (from right) is placed after 3 digits but beyond
that every separator is placed after 2 digits.
- is replaced by
-
QTBUG-81050
Do number-formatting correctly
-
- Closed
-
- relates to
-
QTBUG-53811 QLocale::toString(double) ignores system settings for group separator (german)
-
- Closed
-
-
QTBUG-71914 QDoubleValidator::validate Accepts Numbers with Misaligned Separator Characters
-
- Closed
-
- resulted in
-
QTBUG-116620 QLocale::toString( double ) digit separators incorrect for Indian locale
-
- Closed
-